--- a/OAuthAndOpenIdConnect/OAuth.OpenIddict.WebClient/package.json
+++ b/OAuthAndOpenIdConnect/OAuth.OpenIddict.WebClient/package.json
@@ -6,9 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "oidc-react": "^3.2.2",
+    "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
