--- a/OAuthAndOpenIdConnect/OAuth.OpenIddict.WebClient/package.json
+++ b/OAuthAndOpenIdConnect/OAuth.OpenIddict.WebClient/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "oidc-client": "^1.11.5",
+    "oidc-client-ts": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
