--- a/SimpleAuth/Cookie.BackendOnly/Cookie.BackendOnly.csproj
+++ b/SimpleAuth/Cookie.BackendOnly/Cookie.BackendOnly.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.7.0" />
   </ItemGroup>
 
 </Project>
